test/objects/Opportunity/fields/Aciers_To__c.field-meta.xml
<CustomField>
    <fullName>Aciers_To__c</fullName>
    <label>Aciers (To)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>