test/objects/Opportunity/fields/Activit__c.field-meta.xml
<CustomField>
    <fullName>Activit__c</fullName>
    <label>Activité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>BAT</fullName>
            </value>
            <value>
                <fullName>ENV</fullName>
            </value>
            <value>
                <fullName>OA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>