test/objects/Opportunity/fields/Adresse__c.field-meta.xml
<CustomField>
    <fullName>Adresse__c</fullName>
    <label>Adresse</label>
    <type>Address</type>
</CustomField>