test/objects/Opportunity/fields/Affaire_termin_e__c.field-meta.xml
<CustomField>
    <fullName>Affaire_termin_e__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affaire terminée</label>
    <type>Checkbox</type>
</CustomField>