test/objects/Opportunity/fields/Agence__c.field-meta.xml
<CustomField>
    <fullName>Agence__c</fullName>
    <label>Agence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agence GE</fullName>
            </value>
            <value>
                <fullName>Agence NE</fullName>
            </value>
            <value>
                <fullName>Agence VD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>