test/objects/Opportunity/fields/Autres_membres_Consortium__c.field-meta.xml
<CustomField>
    <fullName>Autres_membres_Consortium__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autres membres Consortium</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Autres membres Consortium)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>