test/objects/Opportunity/fields/B_ton_M__c.field-meta.xml
<CustomField>
    <fullName>B_ton_M__c</fullName>
    <label>Béton (M³)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>