test/objects/Opportunity/fields/Bamo__c.field-meta.xml
<CustomField>
    <fullName>Bamo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bamo</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>