test/objects/Opportunity/fields/Bernasconi__c.field-meta.xml
<CustomField>
    <fullName>Bernasconi__c</fullName>
    <label>% Bernasconi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>