test/objects/Opportunity/fields/Bureau_Architecte_2__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Architecte_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bureau Architecte 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Bureau Architecte 2)</relationshipLabel>
    <relationshipName>OpportunitiesPWCx</relationshipName>
    <type>Lookup</type>
</CustomField>