test/objects/Opportunity/fields/Bureau_Architecte_3__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Architecte_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bureau Architecte 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Bureau Architecte 3)</relationshipLabel>
    <relationshipName>OpportunitiesPWD3</relationshipName>
    <type>Lookup</type>
</CustomField>