test/objects/Opportunity/fields/Bureau_Architecte__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Architecte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bureau Architecte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Bureau Architecte)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>