test/objects/Opportunity/fields/Bureau_Ing_nieur_DT__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Ing_nieur_DT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bureau Ingénieur/DT</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Bureau Ingénieur/DT)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>