test/objects/Opportunity/fields/Ca_r_alis_march_de_base__c.field-meta.xml
<CustomField>
    <fullName>Ca_r_alis_march_de_base__c</fullName>
    <formula>Chiffre_d_affaire_r_alis__c  /  Montant_de_l_offre_Base__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Ca réalisé/marché de base</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>