test/objects/Opportunity/fields/Calculateur__c.field-meta.xml
<CustomField>
    <fullName>Calculateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calculateur</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>BERNASCONI</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Calculateur)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>