test/objects/Opportunity/fields/Calculateur_first_name__c.field-meta.xml
<CustomField>
    <fullName>Calculateur_first_name__c</fullName>
    <formula>IF(
    ISBLANK( Calculateur__c ),
    &quot;&quot;,
     Calculateur__r.LastName 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculateur first name</label>
    <type>Text</type>
</CustomField>