test/objects/Opportunity/fields/Calculateur_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Calculateur_Last_Name__c</fullName>
    <formula>IF(
    ISBLANK( Calculateur__c ),
    &quot;&quot;,
     Calculateur__r.FirstName 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculateur Last Name</label>
    <type>Text</type>
</CustomField>