test/objects/Opportunity/fields/Canton__c.field-meta.xml
<CustomField>
    <fullName>Canton__c</fullName>
    <label>Canton</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>VD</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BL</fullName>
            </value>
            <value>
                <fullName>BS</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>GL</fullName>
            </value>
            <value>
                <fullName>GR</fullName>
            </value>
            <value>
                <fullName>JU</fullName>
            </value>
            <value>
                <fullName>LU</fullName>
            </value>
            <value>
                <fullName>NW</fullName>
            </value>
            <value>
                <fullName>OW</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>SH</fullName>
            </value>
            <value>
                <fullName>SO</fullName>
            </value>
            <value>
                <fullName>SZ</fullName>
            </value>
            <value>
                <fullName>TG</fullName>
            </value>
            <value>
                <fullName>TI</fullName>
            </value>
            <value>
                <fullName>UR</fullName>
            </value>
            <value>
                <fullName>VS</fullName>
            </value>
            <value>
                <fullName>ZG</fullName>
            </value>
            <value>
                <fullName>ZH</fullName>
            </value>
            <value>
                <fullName>ETRANGER</fullName>
            </value>
            <value>
                <fullName>BVD</fullName>
                <isActive>false</isActive>
                <label>BVD</label>
            </value>
            <value>
                <fullName>CD</fullName>
                <isActive>false</isActive>
                <label>CD</label>
            </value>
            <value>
                <fullName>FR-</fullName>
                <isActive>false</isActive>
                <label>FR-</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>