test/objects/Opportunity/fields/Chiffre_d_affaire_r_alis__c.field-meta.xml
<CustomField>
    <fullName>Chiffre_d_affaire_r_alis__c</fullName>
    <label>Chiffre d’affaire réalisé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>