test/objects/Opportunity/fields/Cible__c.field-meta.xml
<CustomField>
    <fullName>Cible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cible</label>
    <type>Checkbox</type>
</CustomField>