test/objects/Opportunity/fields/Classement_l_ouverture__c.field-meta.xml
<CustomField>
    <fullName>Classement_l_ouverture__c</fullName>
    <label>Classement à l&apos;ouverture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>