test/objects/Opportunity/fields/Coef_sur_D_S__c.field-meta.xml
<CustomField>
    <fullName>Coef_sur_D_S__c</fullName>
    <formula>(  Marge_Brut__c  -  Marge_Net__c  )  /  Marge_Brut__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coef sur D.S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>