test/objects/Opportunity/fields/Conducteur_de_travaux__c.field-meta.xml
<CustomField>
    <fullName>Conducteur_de_travaux__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conducteur de travaux</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Conducteur de travaux</relationshipLabel>
    <relationshipName>Conducteur_Travaux</relationshipName>
    <type>Lookup</type>
</CustomField>