test/objects/Opportunity/fields/Cons__c.field-meta.xml
<CustomField>
    <fullName>Cons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cons</label>
    <type>Checkbox</type>
</CustomField>