test/objects/Opportunity/fields/Credit_d_heures_h__c.field-meta.xml
<CustomField>
    <fullName>Credit_d_heures_h__c</fullName>
    <label>Credit d&apos;heures (h)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>