test/objects/Opportunity/fields/Crit_res_prix__c.field-meta.xml
<CustomField>
    <fullName>Crit_res_prix__c</fullName>
    <label>% Critère prix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>