test/objects/Opportunity/fields/D_but_Travaux__c.field-meta.xml
<CustomField>
    <fullName>D_but_Travaux__c</fullName>
    <label>Début Travaux</label>
    <type>Date</type>
</CustomField>