test/objects/Opportunity/fields/D_p_t_d_offre_par__c.field-meta.xml
<CustomField>
    <fullName>D_p_t_d_offre_par__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dépôt d&apos;offre par</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>