test/objects/Opportunity/fields/Date_adjudication__c.field-meta.xml
<CustomField>
    <fullName>Date_adjudication__c</fullName>
    <label>Date adjudication</label>
    <type>Date</type>
</CustomField>