test/objects/Opportunity/fields/Date_de_cr_ation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_cr_ation__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date de création</label>
    <type>Date</type>
</CustomField>