test/objects/Opportunity/fields/Date_de_remise_offre__c.field-meta.xml
<CustomField>
    <fullName>Date_de_remise_offre__c</fullName>
    <label>Date de remise offre</label>
    <type>DateTime</type>
</CustomField>