test/objects/Opportunity/fields/Date_de_visite__c.field-meta.xml
<CustomField>
    <fullName>Date_de_visite__c</fullName>
    <label>Date de visite</label>
    <type>DateTime</type>
</CustomField>