test/objects/Opportunity/fields/Date_fin_des_travaux__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_des_travaux__c</fullName>
    <label>Date fin des travaux</label>
    <type>Date</type>
</CustomField>