test/objects/Opportunity/fields/Date_ouverture_Offre__c.field-meta.xml
<CustomField>
    <fullName>Date_ouverture_Offre__c</fullName>
    <label>Date ouverture Offre</label>
    <type>Date</type>
</CustomField>