test/objects/Opportunity/fields/Date_remise_questions__c.field-meta.xml
<CustomField>
    <fullName>Date_remise_questions__c</fullName>
    <label>Date remise questions</label>
    <type>DateTime</type>
</CustomField>