test/objects/Opportunity/fields/Date_transmission_ouverture_des_offres__c.field-meta.xml
<CustomField>
    <fullName>Date_transmission_ouverture_des_offres__c</fullName>
    <label>Date transmission ouverture des offres</label>
    <type>Date</type>
</CustomField>