test/objects/Opportunity/fields/Delta_prix_adjudication_HT__c.field-meta.xml
<CustomField>
    <fullName>Delta_prix_adjudication_HT__c</fullName>
    <formula>Montant_Repondu_HT_Base_Bernasconi__c -  Prix_adjug_HT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta prix adjudication HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>