test/objects/Opportunity/fields/Dossier__c.field-meta.xml
<CustomField>
    <fullName>Dossier__c</fullName>
    <displayFormat>D-{0000}</displayFormat>
    <label>Dossier</label>
    <type>AutoNumber</type>
</CustomField>