test/objects/Opportunity/fields/Dur_e_des_travaux__c.field-meta.xml
<CustomField>
    <fullName>Dur_e_des_travaux__c</fullName>
    <formula>(YEAR( Date_fin_des_travaux__c ) - YEAR( D_but_Travaux__c )) * 12 +
(MONTH( Date_fin_des_travaux__c ) - MONTH( D_but_Travaux__c )) +
IF(DAY( Date_fin_des_travaux__c ) &lt; DAY( D_but_Travaux__c ), -1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée des travaux</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>