test/objects/Opportunity/fields/Ecart_avec_notre_offre_en__c.field-meta.xml
<CustomField>
    <fullName>Ecart_avec_notre_offre_en__c</fullName>
    <formula>(Prix_adjug_HT__c  -  Montant_Repondu_HT_Base_Bernasconi__c ) / Montant_Repondu_HT_Base_Bernasconi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecart avec notre offre en %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>