test/objects/Opportunity/fields/Ecart_Montant_Laur_at_V_S_montant_offre__c.field-meta.xml
<CustomField>
    <fullName>Ecart_Montant_Laur_at_V_S_montant_offre__c</fullName>
    <label>Ecart Montant Lauréat V/S montant offre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>