test/objects/Opportunity/fields/Enrob_s_To__c.field-meta.xml
<CustomField>
    <fullName>Enrob_s_To__c</fullName>
    <label>Enrobés (To)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>