test/objects/Opportunity/fields/Estimation_HT__c.field-meta.xml
<CustomField>
    <fullName>Estimation_HT__c</fullName>
    <label>Estimation HT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>