test/objects/Opportunity/fields/Estimation_HT_Connu__c.field-meta.xml
<CustomField>
    <fullName>Estimation_HT_Connu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimation HT Connu</label>
    <type>Checkbox</type>
</CustomField>