test/objects/Opportunity/fields/Files_Ids__c.field-meta.xml
<CustomField>
    <fullName>Files_Ids__c</fullName>
    <label>Files_Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>