test/objects/Opportunity/fields/Int_r_t__c.field-meta.xml
<CustomField>
    <fullName>Int_r_t__c</fullName>
    <label>Intérêt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Faible</fullName>
                <isActive>false</isActive>
                <label>Faible</label>
            </value>
            <value>
                <fullName>Fort</fullName>
                <isActive>false</isActive>
                <label>Fort</label>
            </value>
            <value>
                <fullName>Moyen</fullName>
                <isActive>false</isActive>
                <label>Moyen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>