test/objects/Opportunity/fields/is_processed__c.field-meta.xml
<CustomField>
    <fullName>is_processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_processed</label>
    <type>Checkbox</type>
</CustomField>