test/objects/Opportunity/fields/latitude__c.field-meta.xml
<CustomField>
    <fullName>latitude__c</fullName>
    <label>latitude</label>
    <length>100</length>
    <type>Text</type>
</CustomField>