test/objects/Opportunity/fields/Laur_at_Adjug_del__c.field-meta.xml
<CustomField>
    <fullName>Laur_at_Adjug_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lauréat Adjugé à</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Lauréat Adjugé à)</relationshipLabel>
    <relationshipName>Opportunities5_del</relationshipName>
    <type>Lookup</type>
</CustomField>