test/objects/Opportunity/fields/Lien_PDF__c.field-meta.xml
<CustomField>
    <fullName>Lien_PDF__c</fullName>
    <label>Lien PDF</label>
    <type>Url</type>
</CustomField>