test/objects/Opportunity/fields/Lien_Simap__c.field-meta.xml
<CustomField>
    <fullName>Lien_Simap__c</fullName>
    <label>Lien Simap</label>
    <type>Url</type>
</CustomField>