test/objects/Opportunity/fields/longitude__c.field-meta.xml
<CustomField>
    <fullName>longitude__c</fullName>
    <label>longitude</label>
    <length>100</length>
    <type>Text</type>
</CustomField>