test/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Perdu</fullName>
            </value>
            <value>
                <fullName>Sans suite</fullName>
            </value>
            <value>
                <fullName>Infructueuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>