test/objects/Opportunity/fields/M_thode__c.field-meta.xml
<CustomField>
    <fullName>M_thode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Méthode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>BERNASCONI</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Méthode)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>