test/objects/Opportunity/fields/Ma_tre_Ouvrage_1__c.field-meta.xml
<CustomField>
    <fullName>Ma_tre_Ouvrage_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maître Ouvrage 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Maître Ouvrage 1)</relationshipLabel>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>