test/objects/Opportunity/fields/Ma_tre_Ouvrage_2__c.field-meta.xml
<CustomField>
    <fullName>Ma_tre_Ouvrage_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maître Ouvrage 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Maître Ouvrage 2)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>