test/objects/Opportunity/fields/Maitre_d_ouvrage_3__c.field-meta.xml
<CustomField>
    <fullName>Maitre_d_ouvrage_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maitre d’ouvrage 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Maitre d’ouvrage 3)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>