test/objects/Opportunity/fields/Maitre_d_uvre_1__c.field-meta.xml
<CustomField>
    <fullName>Maitre_d_uvre_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maitre d’œuvre 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Maitre d’œuvre 1)</relationshipLabel>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>