test/objects/Opportunity/fields/Maitre_d_uvre_2__c.field-meta.xml
<CustomField>
    <fullName>Maitre_d_uvre_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maitre d’œuvre 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Maitre d’œuvre 2)</relationshipLabel>
    <relationshipName>Opportunities9</relationshipName>
    <type>Lookup</type>
</CustomField>