test/objects/Opportunity/fields/Maitre_d_uvre_3__c.field-meta.xml
<CustomField>
    <fullName>Maitre_d_uvre_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maitre d’œuvre 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Maitre d’œuvre 3)</relationshipLabel>
    <relationshipName>OpportunitiesPWCi</relationshipName>
    <type>Lookup</type>
</CustomField>