test/objects/Opportunity/fields/Marge_Brut__c.field-meta.xml
<CustomField>
    <fullName>Marge_Brut__c</fullName>
    <label>Marge Brute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>