test/objects/Opportunity/fields/Marge_Net__c.field-meta.xml
<CustomField>
    <fullName>Marge_Net__c</fullName>
    <label>Marge Nette</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>