test/objects/Opportunity/fields/Marge_objectif_en__c.field-meta.xml
<CustomField>
    <fullName>Marge_objectif_en__c</fullName>
    <label>Marge objectif en %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>