test/objects/Opportunity/fields/Montant_adjug_HT_Bernasconi__c.field-meta.xml
<CustomField>
    <fullName>Montant_adjug_HT_Bernasconi__c</fullName>
    <label>Montant adjugé HT à Bernasconi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>