test/objects/Opportunity/fields/Montant_adjug_HT_Total__c.field-meta.xml
<CustomField>
    <fullName>Montant_adjug_HT_Total__c</fullName>
    <formula>Prix_adjug_HT__c  +  Prix_rendu_du_1_er_HT__c  +  Montant_adjug_HT_Bernasconi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant adjugé HT à Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>