test/objects/Opportunity/fields/Montant_D_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Montant_D_Attribution__c</fullName>
    <label>Montant D&apos;Attribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>