test/objects/Opportunity/fields/Montant_de_l_offre_Base__c.field-meta.xml
<CustomField>
    <fullName>Montant_de_l_offre_Base__c</fullName>
    <label>Montant de l&apos;offre Base</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>