test/objects/Opportunity/fields/Montant_du_laur_at_en_Ke__c.field-meta.xml
<CustomField>
    <fullName>Montant_du_laur_at_en_Ke__c</fullName>
    <label>Montant du lauréat en (Ke)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>