test/objects/Opportunity/fields/Montant_Offre_si_Montant_Laur_at_renseig__c.field-meta.xml
<CustomField>
    <fullName>Montant_Offre_si_Montant_Laur_at_renseig__c</fullName>
    <label>Montant Offre si Montant Lauréat renseig</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>