test/objects/Opportunity/fields/Montant_r_pondu_variante_3__c.field-meta.xml
<CustomField>
    <fullName>Montant_r_pondu_variante_3__c</fullName>
    <label>Montant répondu variante 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>