test/objects/Opportunity/fields/Montant_Repondu_HT_Base_Bernasconi__c.field-meta.xml
<CustomField>
    <fullName>Montant_Repondu_HT_Base_Bernasconi__c</fullName>
    <label>Montant répondu hors-taxes base</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>