test/objects/Opportunity/fields/Montant_repondu_HT_Variante_2_Bernasconi__c.field-meta.xml
<CustomField>
    <fullName>Montant_repondu_HT_Variante_2_Bernasconi__c</fullName>
    <label>Montant répondu variante 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>