test/objects/Opportunity/fields/N_d_affaire_Chantier__c.field-meta.xml
<CustomField>
    <fullName>N_d_affaire_Chantier__c</fullName>
    <label>N° d’affaire-Chantier</label>
    <length>225</length>
    <type>Text</type>
</CustomField>