test/objects/Opportunity/fields/N_SIMAP_OLMERO_mail__c.field-meta.xml
<CustomField>
    <fullName>N_SIMAP_OLMERO_mail__c</fullName>
    <label>N°SIMAP / OLMERO / MAIL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N°SIMAP</fullName>
            </value>
            <value>
                <fullName>OLMERO</fullName>
            </value>
            <value>
                <fullName>MAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>