test/objects/Opportunity/fields/Nature_travaux__c.field-meta.xml
<CustomField>
    <fullName>Nature_travaux__c</fullName>
    <label>Nature travaux</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GC ROUTES</fullName>
            </value>
            <value>
                <fullName>BATIMENT</fullName>
            </value>
            <value>
                <fullName>OUVRAGES ART</fullName>
            </value>
            <value>
                <fullName>RAIL</fullName>
            </value>
            <value>
                <fullName>EnR</fullName>
            </value>
            <value>
                <fullName>SERVICE</fullName>
            </value>
            <value>
                <fullName>TRAVAUX PROXIMITE</fullName>
            </value>
            <value>
                <fullName>BAT - Neuf</fullName>
                <isActive>false</isActive>
                <label>BAT - Neuf</label>
            </value>
            <value>
                <fullName>BAT - Renovation</fullName>
                <isActive>false</isActive>
                <label>BAT - Renovation</label>
            </value>
            <value>
                <fullName>CFF-Clustering</fullName>
                <isActive>false</isActive>
                <label>CFF-Clustering</label>
            </value>
            <value>
                <fullName>CFF-GC</fullName>
                <isActive>false</isActive>
                <label>CFF-GC</label>
            </value>
            <value>
                <fullName>CFF-Gareet Lhand</fullName>
                <isActive>false</isActive>
                <label>CFF-Gareet Lhand</label>
            </value>
            <value>
                <fullName>CFF-OA</fullName>
                <isActive>false</isActive>
                <label>CFF-OA</label>
            </value>
            <value>
                <fullName>CFF-Reseaux</fullName>
                <isActive>false</isActive>
                <label>CFF-Reseaux</label>
            </value>
            <value>
                <fullName>GC-Amenagements</fullName>
                <isActive>false</isActive>
                <label>GC-Amenagements</label>
            </value>
            <value>
                <fullName>GC-Assainissement</fullName>
                <isActive>false</isActive>
                <label>GC-Assainissement</label>
            </value>
            <value>
                <fullName>GC-BAT</fullName>
                <isActive>false</isActive>
                <label>GC-BAT</label>
            </value>
            <value>
                <fullName>GC-OA</fullName>
                <isActive>false</isActive>
                <label>GC-OA</label>
            </value>
            <value>
                <fullName>GC-Renaturation</fullName>
                <isActive>false</isActive>
                <label>GC-Renaturation</label>
            </value>
            <value>
                <fullName>GC-Reseaux</fullName>
                <isActive>false</isActive>
                <label>GC-Reseaux</label>
            </value>
            <value>
                <fullName>GC-Route</fullName>
                <isActive>false</isActive>
                <label>GC-Route</label>
            </value>
            <value>
                <fullName>GC-Terrassements</fullName>
                <isActive>false</isActive>
                <label>GC-Terrassements</label>
            </value>
            <value>
                <fullName>OA-Entretien</fullName>
                <isActive>false</isActive>
                <label>OA-Entretien</label>
            </value>
            <value>
                <fullName>OFROU-Noir</fullName>
                <isActive>false</isActive>
                <label>OFROU-Noir</label>
            </value>
            <value>
                <fullName>OFROU-OA</fullName>
                <isActive>false</isActive>
                <label>OFROU-OA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>